improvements for playerwarps